# salesforce-bulk-md-integration

./: README.md
salesforce-bulk-md-integration/: README.md  pyproject.toml
salesforce-bulk-md-integration/api/auth/: token_client_credentials.py
salesforce-bulk-md-integration/api/config/: settings.py
salesforce-bulk-md-integration/api/data_integration/: bulk_export.py  bulk_upsert.py  convert_dpt_master.py  convert_master_generic.py
salesforce-bulk-md-integration/configs/: example_master_config.yaml  export_purchase_detail.yaml  export_purchase_header.yaml  orderdetailmd.yaml  purchase.yaml
salesforce-bulk-md-integration/input/original_data/: 04_DIV.20250305042159.ALL
salesforce-bulk-md-integration/scripts/: export_soql.py
